<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">

    <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error"
            android:textSize="30sp"
            android:textColor="@color/textDefault"/>

    <View
            android:id="@+id/v"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/divider_line"
            android:layout_below="@id/txt_title"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>


    <TextView
            android:id="@+id/txt_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verificar_local"
            android:textSize="14sp"
            android:textColor="@color/textDefault"
            android:layout_below="@id/v"/>


    <Button
            android:id="@+id/btn_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_description"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="16dp"
            style="@style/ButtonDialog"
            android:text="@string/sim"/>

    <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_description"
            android:layout_toStartOf="@id/btn_confirm"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/btn_dialog"
            style="@style/ButtonDialog"
            android:text="@string/nao"
    />


</RelativeLayout>